# signup

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  abieos_numeric.hpp  build.sh  extra.cpp  signup.cpp  signup.hpp
contracts/: CMakeLists.txt
contracts/eosio.system/src/: delegate_bandwidth.cpp
contracts/signup/: CMakeLists.txt
contracts/signup/include/signup/: signup.hpp
contracts/signup/ricardian/: signup.clauses.md  signup.contracts.md.in
contracts/signup/src/: extra.cpp  signup.cpp
tests/: CMakeLists.txt  contracts.hpp.in  main.cpp  signup_tests.cpp  tester.hpp
tests/test_contracts/eosio.system.nodeferred.172/: Readme.txt
tests/test_contracts/eosio.token.172/: Readme.txt
